# OpenKit

./: .gitignore  CMakeLists.txt  QuantKit.pro  README.md
3rd/: CMakeLists.txt
3rd/aggregation/: CMakeLists.txt
3rd/extensionsystem/: CMakeLists.txt  pluginmanager.cpp
cmake/: boost.cmake  c++11.cmake  macosx.cmake  qt.cmake
include/QK/: Event.h  EventType.h  Provider.h  quantkit_global.h
include/QuantKit/: AltId.h  BarData.h  BarFactory.h  BarFactoryItem.h  BarFilter.h  BarFilterItem.h  BarInput.h  BarSeries.h  BarSliceFactory.h  BarStatus.h  BarType.h  ChartStyle.h  Clock.h  ClockMode.h  ClockResolution.h  ClockType.h  CommissionProvider.h  CommissionType.h  Configuration.h  ConsoleEventLogger.h  Cross.h  CurrencyConverter.h  CurrencyId.h  DataFile.h  DataFileManager.h  DataFileServer.h  DataFileServerClient.h  DataFileServerClient_.h  DataFilter.h  DataImport.h  DataManager.h  DataObject.h  DataProcessor.h  DataSeries.h  DataSeriesEventLogger.h  DataSeriesIterator.h  DataSeriesNameHelper.h  DataServer.h  DataSimulator.h  EWidthStyle.h  (+163 more)
src/: Account.cpp  AccountDataEntry.cpp  AccountDataFieldList.cpp  AccountDataManager.cpp  AccountDataSnapshot.cpp  AccountPosition.cpp  AccountTransaction.cpp  AltId.cpp  BarFactory.cpp  BarFactoryItem.cpp  BarFactoryItem_p.h  BarFilter.cpp  BarFilterItem.cpp  BarSeries.cpp  BarSliceFactory.cpp  CMakeLists.txt  Clock.cpp  CommissionProvider.cpp  Configuration.cpp  ConsoleEventLogger.cpp  CurrencyConverter.cpp  CurrencyId.cpp  DataFile.cpp  DataFileManager.cpp  DataFileServer.cpp  DataFileServerClient.cpp  DataFileServerClient_.cpp  DataFile_p.h  DataFilter.cpp  DataImport.cpp  DataManager.cpp  DataObject.cpp  DataObject_p.h  DataProcessor.cpp  DataSeries.cpp  DataSeriesEventLogger.cpp  DataSeriesIterator.cpp  DataSeriesNameHelper.cpp  DataSeries_p.h  DataServer.cpp  (+137 more)
src/Event/: AccountData.cpp  Ask.cpp  Bar.cpp  BarSlice.cpp  Bid.cpp  DataCount.cpp  ExecutionCommand.cpp  Fill.cpp  (+78 more)
test/: CMakeLists.txt  test_Event.cpp
(+260 files in other folders)
