cmake_minimum_required(VERSION 3.0.2)

project(extensionsystem)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)

file(GLOB_RECURSE LIB_SOURCES *.cpp)
file(GLOB_RECURSE LIB_HEADERS *.h)
file(GLOB_RECURSE LIB_QRC *.qrc)
file(GLOB_RECURSE LIB_UI *.ui)

list(APPEND LIB_SOURCES
        ${LIB_HEADERS}
)

set(TARGET_LIBRARIES
    Qt5::Core
    Qt5::Widgets
)

add_library(${PROJECT_NAME} SHARED ${LIB_SOURCES} ${LIB_QRC})
target_link_libraries(${PROJECT_NAME} ${TARGET_LIBRARIES})

set(${PROJECT_NAME}_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR} CACHE INTERNAL "${PROJECT_NAME}_INCLUDE_DIRS" FORCE)
set(${PROJECT_NAME}_LIBRARIES ${PROJECT_NAME} CACHE INTERNAL "${PROJECT_NAME}_LIBRARIES" FORCE)

install(TARGETS ${PROJECT_NAME}
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
)
